# Calculator

./: .gitignore  CMakeLists.txt  README.md
include/: calculator.h  calculator_terminal.h  log.h  program.h  pzlog.h
lib/lib/: libzlog.so.1.2
src/: calculator.c  calculator_terminal.c  log.c  main.c  program.c  pzlog.c
